--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="tooplate-event-invitation.css">
 <!--
 
-Tooplate 2152 Event Invitation
+Tooplate 2152  Invitation
 
 https://www.tooplate.com/view/2152-event-invitation
 
